# MIMIC_IV_MEDS

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality-pr.yaml  python-build.yaml  tests.yaml
scripts/: update_citation.py
src/MIMIC_IV_MEDS/: __init__.py  __main__.py  commands.py  download.py  pre_MEDS.py
src/MIMIC_IV_MEDS/configs/: ETL.yaml  event_configs.yaml  main.yaml
tests/: e2e_demo_test.py  test_citation.py  test_commands.py  test_download.py
