[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MIMIC-IV-MEDS"
dynamic = ["version"]
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "An ETL pipeline to extract MIMIC-IV data into the MEDS format."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
   "polars~=1.30.0", "meds-transforms~=0.6", "meds-extract~=0.5", "requests", "beautifulsoup4",
   "hydra-core", "hydra-joblib-launcher",
]

[dependency-groups]
dev = ["pre-commit<4", "ruff", "pytest", "pytest-cov"]

[tool.setuptools_scm]

[project.optional-dependencies]
slurm_parallelism = ["hydra-submitit-launcher"]

[project.scripts]
MEDS_extract-MIMIC_IV = "MIMIC_IV_MEDS.__main__:main"

[project.urls]
Homepage = "https://github.com/Medical-Event-Data-Standard/MIMIC_IV_MEDS"
Issues = "https://github.com/Medical-Event-Data-Standard/MIMIC_IV_MEDS/issues"

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
]
ignore = [
    "SIM108", # ternary operator suggestions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
