[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MIMIC-IV-MEDS"
dynamic = ["version"]
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "An ETL pipeline to extract MIMIC-IV data into the MEDS format."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Each dep is pinned with a lower bound at the version we actively test against,
# and an upper bound at the next known-or-expected breaking major. `meds-extract`
# is capped below 0.6 because that release ships breaking syntax changes that
# require a coordinated code migration (tracked in #40).
dependencies = [
    "polars~=1.30",
    "meds-transforms~=0.6",
    "meds-extract~=0.5",
    "requests~=2.32",
    "beautifulsoup4~=4.12",
    "hydra-core~=1.3",
    "hydra-joblib-launcher~=1.2",
]

[dependency-groups]
# `shfmt-py` bundles the `shfmt` binary that the `mdformat-shfmt` pre-commit
# hook shells out to; declaring it here (in addition to pinning it under the
# mdformat hook's `additional_dependencies`) keeps local + CI behavior in lock
# step instead of silently falling back to whatever `shfmt` is on the system.
# `pytest-rerunfailures` lets CI auto-retry the e2e demo download test on the
# narrow set of network exceptions seen coming out of PhysioNet (connection
# reset / IncompleteRead mid-stream) instead of turning a bad upstream minute
# into a failed CI build.
dev = [
    "pre-commit~=3.8",
    "ruff>=0.11,<1.0",
    "pytest~=9.0",
    "pytest-cov~=7.1",
    "pytest-rerunfailures==16.1",
    "shfmt-py==3.12.0.2",
]

[tool.setuptools_scm]

[project.optional-dependencies]
slurm_parallelism = ["hydra-submitit-launcher~=1.2"]

[project.scripts]
MEDS_extract-MIMIC_IV = "MIMIC_IV_MEDS.__main__:main"

[project.urls]
Homepage = "https://github.com/Medical-Event-Data-Standard/MIMIC_IV_MEDS"
Issues = "https://github.com/Medical-Event-Data-Standard/MIMIC_IV_MEDS/issues"

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
]
ignore = [
    "SIM108", # ternary operator suggestions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
